--- a/pwa-shell/Info.plist
+++ b/pwa-shell/Info.plist
@@ -91,11 +91,8 @@
 	<true/>
 	<key>WKAppBoundDomains</key>
 	<array>
-		<string>tomayac.github.io</string>
-		<string>login.live.com</string>
-		<string>account.live.com</string>
-		<string>login.microsoftonline.com</string>
-		<string>www.khmyznikov.com</string>
+		<string>reseasyapp.com</string>
+		<string>www.reseasyapp.com</string>
 	</array>
 </dict>
 </plist>
